Upload notebook that combines json files for further cleaning

--- a/player_data.ipynb
+++ b/player_data.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "2d63f882",
+   "id": "0e3bf091",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,10 +38,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85018493",
+   "id": "d3e98489",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create a pandas table 20 columns x 7525 rows"
+   ]
   }
  ],
  "metadata": {
