--- a/player_tags_api.ipynb
+++ b/player_tags_api.ipynb
@@ -131,6 +131,69 @@
    "id": "de63240a",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Same code as above, but added the letter \"G\" to player tag randomizer\n",
+    "import requests\n",
+    "import random\n",
+    "import json\n",
+    "from datetime import datetime\n",
+    "from config import clash_api_key\n",
+    "\n",
+    "# Clash Royale API endpoint\n",
+    "api_endpoint = \"https://api.clashroyale.com/v1/players/{}\"\n",
+    "\n",
+    "# List to store player tags and player data\n",
+    "player_data_list = []\n",
+    "\n",
+    "# Function to make API request and process the response\n",
+    "def make_api_request(player_tag):\n",
+    "    api_url = api_endpoint.format(player_tag)\n",
+    "    headers = {\n",
+    "        \"Authorization\": \"Bearer %s\" % clash_api_key, \n",
+    "    }\n",
+    "    response = requests.get(api_url, headers=headers)\n",
+    "\n",
+    "    # Process the API response\n",
+    "    if response.status_code == 200:\n",
+    "        # If API call successful, add player data to the list\n",
+    "        player_data = response.json()\n",
+    "        player_data_list.append({\"player_tag\": player_tag, \"data\": player_data})\n",
+    "    else:\n",
+    "        print(f\"Failed to fetch data for player tag {player_tag}. Status code: {response.status_code}\")\n",
+    "\n",
+    "# Function to save JSON data to a local file with timestamp\n",
+    "def save_json_data(data, file_prefix='player_tags'):\n",
+    "    timestamp = datetime.now().strftime(\"%Y%m%d%H%M%S\")\n",
+    "    file_name = f\"{file_prefix}_{timestamp}.json\"\n",
+    "    with open(file_name, 'w') as file:\n",
+    "        json.dump(data, file, indent=2)\n",
+    "    return file_name\n",
+    "\n",
+    "# Loop 5 times\n",
+    "for iteration in range(5):\n",
+    "    # List to store player tags and player data for each iteration\n",
+    "    player_data_list = []\n",
+    "\n",
+    "    # Generate 6,000 random player tags\n",
+    "    for _ in range(6000):\n",
+    "        tag_length = random.randint(5, 9)\n",
+    "        player_tag = ''.join(random.choices('GPYLQRJCUV0289', k=tag_length))\n",
+    "        formatted_player_tag = \"%23\" + player_tag  \n",
+    "        data = make_api_request(formatted_player_tag)\n",
+    "        if data:\n",
+    "            player_data_list.append(data)\n",
+    "\n",
+    "    # Save as JSON with timestamp\n",
+    "    output_file = save_json_data(player_data_list, file_prefix=f'player_tags_{iteration}')\n",
+    "    print(f\"Iteration {iteration + 1}: JSON data saved to: {output_file}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b89f1f9e",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
